ws_lidar/log/build_2025-03-08_13-57-57/gps_path_tracking/stderr.log
  File "/home/cewan/Automated-Tour-Car/ws_lidar/install/gps_path_tracking/lib/python3.10/site-packages/gps_path_tracking/gps_tracking.py", line 463
    f'Position already on road: '
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

